<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/main_screen_background"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/registartion_window_text"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:textColor="#ffffffff"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_text_view"
        android:id="@+id/registerLoginTextView"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:textColor="#ffffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/passwrd_text_view"
        android:id="@+id/textView3"
        android:layout_below="@+id/registerLoginTextView"
        android:layout_alignLeft="@+id/registerLoginTextView"
        android:layout_alignStart="@+id/registerLoginTextView"
        android:layout_marginTop="35dp"
        android:textColor="#ffffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email_text_view"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="35dp"
        android:textColor="#ffffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/country_text_view"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="35dp"
        android:textColor="#ffffffff"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerLoginEditText"
        android:ems="8"
        android:layout_marginLeft="24dp"
        android:layout_alignBottom="@+id/registerLoginTextView"
        android:layout_toRightOf="@+id/textView3"
        android:background="@drawable/rounded_edittext"
        android:alpha="0.5"
        android:gravity="center"
        android:hint="@string/login_hint_text_view"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="8"
        android:id="@+id/registerPasswordEditText"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/registerLoginEditText"
        android:layout_alignStart="@+id/registerLoginEditText"
        android:background="@drawable/rounded_edittext"
        android:alpha="0.5"
        android:gravity="center"
        android:hint="@string/passwrd_hint_text_view"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="8"
        android:id="@+id/registerEmailEditText"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/registerPasswordEditText"
        android:layout_alignStart="@+id/registerPasswordEditText"
        android:background="@drawable/rounded_edittext"
        android:alpha="0.5"
        android:gravity="center"
        android:hint="@string/email_hint_text_view"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerCountrySpinner"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/registerEmailEditText"
        android:layout_alignStart="@+id/registerEmailEditText"
        android:entries="@array/countries_string_array"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text"
        android:id="@+id/registerButton"
        android:onClick="finishRegistration"
        android:layout_below="@+id/registerCountrySpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

</RelativeLayout>